// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Render with not loaded data 1`] = `
<div
  className="profile-card"
>
  <div
    className="profile-avatar"
  >
    <span
      className="user-avatar xLarge"
      style={
        Object {
          "backgroundImage": "url(https://images.ecency.com/u/user1/avatar/large)",
        }
      }
    />
  </div>
  <h1>
    <div
      className="username"
    >
      user1
    </div>
  </h1>
  <div
    className="vpower-line"
  >
    <div
      className="vpower-line-inner"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="vpower-percentage"
  >
    <span
      title="Voting Power"
    >
      100.00
    </span>
  </div>
  <div
    className="extra-props"
  >
    <div
      className="prop"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M6.18,15.64A2.18,2.18 0 0,1 8.36,17.82C8.36,19 7.38,20 6.18,20C5,20 4,19 4,17.82A2.18,2.18 0 0,1 6.18,15.64M4,4.44A15.56,15.56 0 0,1 19.56,20H16.73A12.73,12.73 0 0,0 4,7.27V4.44M4,10.1A9.9,9.9 0 0,1 13.9,20H11.07A7.07,7.07 0 0,0 4,12.93V10.1Z"
          fill="currentColor"
        />
      </svg>
      <a
        href="https://ecency.com/@user1/rss.xml"
        target="_external"
      >
        RSS feed
      </a>
    </div>
  </div>
</div>
`;

exports[`(2) Render with loaded data 1`] = `
<div
  className="profile-card"
>
  <div
    className="profile-avatar"
  >
    <span
      className="user-avatar xLarge"
      style={
        Object {
          "backgroundImage": "url(https://images.ecency.com/u/user1/avatar/large)",
        }
      }
    />
    <div
      className="reputation"
    >
      38
    </div>
  </div>
  <h1>
    <div
      className="username"
    >
      user1
    </div>
  </h1>
  <div
    className="vpower-line"
  >
    <div
      className="vpower-line-inner"
      style={
        Object {
          "width": "94.76%",
        }
      }
    />
  </div>
  <div
    className="vpower-percentage"
  >
    <span
      title="Voting Power"
    >
      94.76
    </span>
  </div>
  <div
    className="basic-info"
  >
    <div
      className="full-name"
    >
      Foo Bar
    </div>
    <div
      className="about"
    >
      Lorem ipsum dolor sit amet
    </div>
  </div>
  <div
    className="stats"
  >
    <div
      className="stat"
    >
      <span
        title="Post Count"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M7,5H21V7H7V5M7,13V11H21V13H7M4,4.5A1.5,1.5 0 0,1 5.5,6A1.5,1.5 0 0,1 4,7.5A1.5,1.5 0 0,1 2.5,6A1.5,1.5 0 0,1 4,4.5M4,10.5A1.5,1.5 0 0,1 5.5,12A1.5,1.5 0 0,1 4,13.5A1.5,1.5 0 0,1 2.5,12A1.5,1.5 0 0,1 4,10.5M7,19V17H21V19H7M4,16.5A1.5,1.5 0 0,1 5.5,18A1.5,1.5 0 0,1 4,19.5A1.5,1.5 0 0,1 2.5,18A1.5,1.5 0 0,1 4,16.5Z"
            fill="currentColor"
          />
        </svg>
         
        4,353
      </span>
    </div>
    <div
      className="stat followers"
    >
      <span
        onClick={[Function]}
        title="Followers"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M16 17V19H2V17S2 13 9 13 16 17 16 17M12.5 7.5A3.5 3.5 0 1 0 9 11A3.5 3.5 0 0 0 12.5 7.5M15.94 13A5.32 5.32 0 0 1 18 17V19H22V17S22 13.37 15.94 13M15 4A3.39 3.39 0 0 0 13.07 4.59A5 5 0 0 1 13.07 10.41A3.39 3.39 0 0 0 15 11A3.5 3.5 0 0 0 15 4Z"
            fill="currentColor"
          />
        </svg>
         
        33,497
      </span>
    </div>
    <div
      className="stat following"
    >
      <span
        onClick={[Function]}
        title="Following"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M15,14C12.33,14 7,15.33 7,18V20H23V18C23,15.33 17.67,14 15,14M6,10V7H4V10H1V12H4V15H6V12H9V10M15,12A4,4 0 0,0 19,8A4,4 0 0,0 15,4A4,4 0 0,0 11,8A4,4 0 0,0 15,12Z"
            fill="currentColor"
          />
        </svg>
         
        165
      </span>
    </div>
  </div>
  <div
    className="extra-props"
  >
    <div
      className="prop"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M21,3L3,10.53V11.5L9.84,14.16L12.5,21H13.46L21,3Z"
          fill="currentColor"
        />
      </svg>
       
      Hive
    </div>
    <div
      className="prop"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M17.9,17.39C17.64,16.59 16.89,16 16,16H15V13A1,1 0 0,0 14,12H8V10H10A1,1 0 0,0 11,9V7H13A2,2 0 0,0 15,5V4.59C17.93,5.77 20,8.64 20,12C20,14.08 19.2,15.97 17.9,17.39M11,19.93C7.05,19.44 4,16.08 4,12C4,11.38 4.08,10.78 4.21,10.21L9,15V16A2,2 0 0,0 11,18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          fill="currentColor"
        />
      </svg>
      <a
        className="website-link"
        href="https://esteem.app"
        target="_external"
      >
        https://esteem.app
      </a>
    </div>
    <div
      className="prop"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
          fill="currentColor"
        />
      </svg>
       
      July 7, 2016
    </div>
    <div
      className="prop"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M6.18,15.64A2.18,2.18 0 0,1 8.36,17.82C8.36,19 7.38,20 6.18,20C5,20 4,19 4,17.82A2.18,2.18 0 0,1 6.18,15.64M4,4.44A15.56,15.56 0 0,1 19.56,20H16.73A12.73,12.73 0 0,0 4,7.27V4.44M4,10.1A9.9,9.9 0 0,1 13.9,20H11.07A7.07,7.07 0 0,0 4,12.93V10.1Z"
          fill="currentColor"
        />
      </svg>
      <a
        href="https://ecency.com/@user1/rss.xml"
        target="_external"
      >
        RSS feed
      </a>
    </div>
  </div>
</div>
`;

exports[`(3) Should show profile edits 1`] = `
<div
  className="profile-card"
>
  <div
    className="profile-avatar"
  >
    <span
      className="user-avatar xLarge"
      style={
        Object {
          "backgroundImage": "url(https://images.ecency.com/u/user1/avatar/large)",
        }
      }
    />
    <div
      className="reputation"
    >
      38
    </div>
  </div>
  <h1>
    <div
      className="username"
    >
      user1
    </div>
  </h1>
  <div
    className="vpower-line"
  >
    <div
      className="vpower-line-inner"
      style={
        Object {
          "width": "94.76%",
        }
      }
    />
  </div>
  <div
    className="vpower-percentage"
  >
    <span
      title="Voting Power"
    >
      94.76
    </span>
  </div>
  <div
    className="basic-info"
  >
    <div
      className="full-name"
    >
      Foo Bar
    </div>
    <div
      className="about"
    >
      Lorem ipsum dolor sit amet
    </div>
  </div>
  <div
    className="stats"
  >
    <div
      className="stat"
    >
      <span
        title="Post Count"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M7,5H21V7H7V5M7,13V11H21V13H7M4,4.5A1.5,1.5 0 0,1 5.5,6A1.5,1.5 0 0,1 4,7.5A1.5,1.5 0 0,1 2.5,6A1.5,1.5 0 0,1 4,4.5M4,10.5A1.5,1.5 0 0,1 5.5,12A1.5,1.5 0 0,1 4,13.5A1.5,1.5 0 0,1 2.5,12A1.5,1.5 0 0,1 4,10.5M7,19V17H21V19H7M4,16.5A1.5,1.5 0 0,1 5.5,18A1.5,1.5 0 0,1 4,19.5A1.5,1.5 0 0,1 2.5,18A1.5,1.5 0 0,1 4,16.5Z"
            fill="currentColor"
          />
        </svg>
         
        4,353
      </span>
    </div>
    <div
      className="stat followers"
    >
      <span
        onClick={[Function]}
        title="Followers"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M16 17V19H2V17S2 13 9 13 16 17 16 17M12.5 7.5A3.5 3.5 0 1 0 9 11A3.5 3.5 0 0 0 12.5 7.5M15.94 13A5.32 5.32 0 0 1 18 17V19H22V17S22 13.37 15.94 13M15 4A3.39 3.39 0 0 0 13.07 4.59A5 5 0 0 1 13.07 10.41A3.39 3.39 0 0 0 15 11A3.5 3.5 0 0 0 15 4Z"
            fill="currentColor"
          />
        </svg>
         
        33,497
      </span>
    </div>
    <div
      className="stat following"
    >
      <span
        onClick={[Function]}
        title="Following"
      >
        <svg
          viewBox="0 0 24 24"
        >
          <path
            d="M15,14C12.33,14 7,15.33 7,18V20H23V18C23,15.33 17.67,14 15,14M6,10V7H4V10H1V12H4V15H6V12H9V10M15,12A4,4 0 0,0 19,8A4,4 0 0,0 15,4A4,4 0 0,0 11,8A4,4 0 0,0 15,12Z"
            fill="currentColor"
          />
        </svg>
         
        165
      </span>
    </div>
  </div>
  <div
    className="extra-props"
  >
    <div
      className="prop"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M21,3L3,10.53V11.5L9.84,14.16L12.5,21H13.46L21,3Z"
          fill="currentColor"
        />
      </svg>
       
      Hive
    </div>
    <div
      className="prop"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M17.9,17.39C17.64,16.59 16.89,16 16,16H15V13A1,1 0 0,0 14,12H8V10H10A1,1 0 0,0 11,9V7H13A2,2 0 0,0 15,5V4.59C17.93,5.77 20,8.64 20,12C20,14.08 19.2,15.97 17.9,17.39M11,19.93C7.05,19.44 4,16.08 4,12C4,11.38 4.08,10.78 4.21,10.21L9,15V16A2,2 0 0,0 11,18M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          fill="currentColor"
        />
      </svg>
      <a
        className="website-link"
        href="https://esteem.app"
        target="_external"
      >
        https://esteem.app
      </a>
    </div>
    <div
      className="prop"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
          fill="currentColor"
        />
      </svg>
       
      July 7, 2016
    </div>
    <div
      className="prop"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M6.18,15.64A2.18,2.18 0 0,1 8.36,17.82C8.36,19 7.38,20 6.18,20C5,20 4,19 4,17.82A2.18,2.18 0 0,1 6.18,15.64M4,4.44A15.56,15.56 0 0,1 19.56,20H16.73A12.73,12.73 0 0,0 4,7.27V4.44M4,10.1A9.9,9.9 0 0,1 13.9,20H11.07A7.07,7.07 0 0,0 4,12.93V10.1Z"
          fill="currentColor"
        />
      </svg>
      <a
        href="https://ecency.com/@user1/rss.xml"
        target="_external"
      >
        RSS feed
      </a>
    </div>
  </div>
  <div
    className="btn-controls"
  >
    <button
      className="btn btn-primary btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Profile Edit
    </button>
  </div>
</div>
`;
